--- a/PointSale/MVC/Views/Category/Index.cshtml
+++ b/PointSale/MVC/Views/Category/Index.cshtml
@@ -30,9 +30,9 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Name }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Name }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Name})
             </td>
         </tr>
     }
