--- a/PointSale/MVC/Views/Shared/_Layout.cshtml
+++ b/PointSale/MVC/Views/Shared/_Layout.cshtml
@@ -85,15 +85,15 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="warehouse">
+                        <div class="login">
                             <div class="btn-group">
                                 <button type="button" class="btn-custom" data-toggle="dropdown">
-                                    Warehouse
+                                   Login
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#" /> @Html.ActionLink("Warehouse Products", "Index", "WarehouseProducts")</li>
-                                    <li>@Html.ActionLink("Search Products", "Index", "SearchProducts")</li>
+                                    <li><a href="#" />@Html.ActionLink("Login", "Login", "Users")</li>
+                                   
 
                                 </ul>
                             </div>
@@ -102,12 +102,15 @@
                         <div class="warehouse">
                             <div class="btn-group">
                                 <button type="button" class="btn-custom" data-toggle="dropdown">
-                                    Login
+                                    Warehouse
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#" />@Html.ActionLink("Login", "Login", "Users")</li>
-                                    
+
+
+                                    <li><a href="#" /> @Html.ActionLink("Warehouse Products", "Index", "WarehouseProducts")</li>
+                                    <li>@Html.ActionLink("Search Products", "Index", "SearchProducts")</li>
+
                                 </ul>
                             </div>
                         </div>
